# Project-Einstein

./: .gitattributes  .gitignore  .pre-commit-config.yaml  0.py  PROJECT_CONSTRUCTION.md  README.md  SRS.md
backend/: .env.example  .gitignore  ARCHITECTURE_V04.md  CHAT_INTEGRATION_SUMMARY.md  GPT5_COMPATIBILITY.md  README.md  TEST_GPT5_SETUP.md  pyproject.toml
backend/app/: logging_utils.py  main.py
backend/app/agent/: agent_context.py  labeler.py  tool_registry.py
backend/app/agent/prompts/: __init__.py  agent_system.yaml  ask_system.yaml  labeler_system.yaml
backend/app/agent/tools/: __init__.py  analyze_results.py  build_scene.py  label_segments.py  segment_image.py  simulate_physics.py  (+1 more)
backend/app/chat/: __init__.py  audit.py  engine.py  repository.py  schemas.py  service.py
backend/app/models/: settings.py
backend/app/pipeline/: sam_detector.py
backend/app/routers/: UNIFIED_CHAT_MIGRATION.md  agent.py  chat.py  diagram.py  init_sim.py  run_sim.py  simulation_update.py  unified_chat.py
backend/app/sim/: __init__.py  analytic.py  builder.py  registry.py  schema.py  universal_builder.py
backend/app/tools/: rapier_bridge.py
backend/sam_server/: Dockerfile  README.md  requirements-cpu.txt  requirements-cu121.txt  requirements.txt  server.py
backend/sim_worker/: matter_worker.js  package-lock.json  package.json  rapier_worker.js  test_scene.json
backend/tests/: test_agent_tools.py  test_builder.py  test_diagram_route.py  test_health.py  test_pulley_schema.py  test_rapier_bridge.py  test_registry_pulley.py  test_registry_ramp.py
docs/: TODO.md  (+6 more)
(+76 files in other folders)
