[tool]
[project]
name = "project-einstein-backend"
version = "0.1.0"
description = "FastAPI service for Project Einstein"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.111,<1.0",
	"uvicorn[standard]>=0.30,<1.0",
	"pydantic>=2.7,<3",
	"pydantic-settings>=2.4,<3",
	"python-multipart>=0.0.9",
	"pillow>=10,<12",
]

[tool.uv]
dev-dependencies = [
	"pytest>=8.0,<9.0",
	"httpx>=0.27,<0.28",
]

[tool.pytest.ini_options]
pythonpath = ["."]

